# perfusionkit

./: .gitignore  AnalyseDialog.ui  CMakeLists.txt  DicomSelectDialog.ui  Doxyfile  MainWindow.ui  analysedialog.cpp  analysedialog.h  binaryimagetreeitem.cpp  binaryimagetreeitem.h  ctimagetreeitem.cpp  ctimagetreeitem.h  ctimagetreemodel.cpp  ctimagetreemodel.h  ctimagetreemodel_serializer.cpp  dicomimagelistmodel.cpp  dicomimagelistmodel.h  dicomselectordialog.cpp  dicomselectordialog.h  imagedefinitions.h  interactorstylevolumeview.cpp  interactorstylevolumeview.h  itkImageToVTKImageFilter.h  itkImageToVTKImageFilter.txx  itkvtktreeitem.cpp  itkvtktreeitem.h  main.cpp  mainwindow.cpp  mainwindow.h  multiplanarreformatwidget.cpp  multiplanarreformatwidget.h  serialization_helper.h  signalslib.hpp  treeitem.cpp  treeitem.h  volumeimagewidget.cpp  volumeimagewidget.h  volumeprojectionwidget.cpp  volumeprojectionwidget.h  vtkbinaryimageoverlay.cpp  (+7 more)
analyse/: AnalyseDialog.ui  analysedialog.cpp  analysedialog.h  clearancecalculator.cpp  clearancecalculator.h  gammaVariate.cpp  gammaVariate.h  gammafitdata.cpp  gammafitdata.h  linearregression.h  linearregressiondata.cpp  linearregressiondata.h  patlakdata.cpp  patlakdata.h  segmentinfo.cpp  segmentinfo.h  segmentlistmodel.cpp  segmentlistmodel.h  segmentselectbutton.cpp  segmentselectbutton.h  timedensitydata.cpp  timedensitydata.h  timedensitydatapicker.cpp  timedensitydatapicker.h
imagetree/: binaryimagetreeitem.cpp  binaryimagetreeitem.h  ctimagetreeitem.cpp  ctimagetreeitem.h  ctimagetreemodel.cpp  ctimagetreemodel.h  dicomtagtype.cpp  dicomtagtype.h  itkvtktreeitem.cpp  itkvtktreeitem.h  segmentationvalues.cpp  segmentationvalues.h  treeitem.cpp  treeitem.h  vtkconnectordatabase.cpp  vtkconnectordatabase.h  vtktreeitem.cpp  vtktreeitem.h  watershedsegmenttreeitem.cpp  watershedsegmenttreeitem.h
main/: MainWindow.ui  dicomselectordialog.cpp  dicomselectordialog.h  main.cpp  mainwindow.cpp  mainwindow.h
misc/: imagedefinitions.h  itkImageToVTKImageFilter.h  itkImageToVTKImageFilter.txx  morphologicalwatershedfrommarkersfilter.h  morphologicalwatershedfrommarkersfilter.txx  signalslib.hpp
serialization/: ctimagetreemodel_serializer.cpp  ctimagetreemodel_serializer.h  serialization_helper.h
vtkwidgets/: interactorstylevolumeview.cpp  interactorstylevolumeview.h  multiplanarreformatwidget.cpp  multiplanarreformatwidget.h  volumeprojectionwidget.cpp  volumeprojectionwidget.h  vtkbinaryimageoverlay.cpp  vtkbinaryimageoverlay.h  vtkbinaryimagetocolor.cpp  vtkbinaryimagetocolor.h  vtkinteractoractiondispatch.h  vtkinteractorstyleprojectionview.cpp  vtkinteractorstyleprojectionview.h
